Fix issue where text in the file tree wrapped to the next line if the sidebar was too small.

--- a/css/style.css
+++ b/css/style.css
@@ -406,6 +406,8 @@ ul{
   -webkit-font-smoothing: antialiased;
   text-align: left;
   padding-left: 5px;
+  white-space: nowrap;
+  overflow: hidden;
 }
 
 .micro_file_head.dir::before{
